updated hbs templates, zod, statusCodes, gracefullyShutDown

--- a/server/templates/controller.template.hbs
+++ b/server/templates/controller.template.hbs
@@ -1,50 +1,52 @@
 import { Request, Response } from 'express';
+import { StatusCodes } from 'http-status-codes';
 import { findAll, findOne, createOne, updateOne, deleteOne } from '../services/{{snakeCase name}}.service';
+import { TActionOneParams, TCreateOneBody, TUpdateOneBody, TUpdateOneParams } from '../validators/{{snakeCase name}}.schemas';
 
 export const get{{titleCase name}}sHandler = async (req: Request, res: Response) => {
   const {{snakeCase name}}s = await findAll();
-  return res.status(200).json({{snakeCase name}}s);
+  return res.status(StatusCodes.OK).json({{snakeCase name}}s);
 };
 
-export const get{{titleCase name}}Handler = async (req: Request, res: Response) => {
+export const get{{titleCase name}}Handler = async (req: Request<TActionOneParams>, res: Response) => {
   try {
     const {{snakeCase name}} = await findOne(req.params.id);
-    if (!{{snakeCase name}}) return res.status(404).json({ errorMessage: '{{titleCase name}} not found.' });
+    if (!{{snakeCase name}}) return res.status(StatusCodes.NOT_FOUND).json({ errorMessage: '{{titleCase name}} not found.' });
 
-    return res.status(200).json({{snakeCase name}});
+    return res.status(StatusCodes.OK).json({{snakeCase name}});
   } catch (err) {
-    return res.status(500).json(err);
+    return res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
   }
 };
 
-export const create{{titleCase name}}Handler = async (req: Request, res: Response) => {
+export const create{{titleCase name}}Handler = async (req: Request<{}, {}, TCreateOneBody>, res: Response) => {
   try {
     const {{snakeCase name}} = await createOne(req.body);
 
-    return res.status(200).json({{snakeCase name}});
+    return res.status(StatusCodes.OK).json({{snakeCase name}});
   } catch (err) {
-    return res.status(500).json(err);
+    return res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
   }
 };
 
-export const update{{titleCase name}}Handler = async (req: Request, res: Response) => {
+export const update{{titleCase name}}Handler = async (req: Request<TUpdateOneParams, {}, TUpdateOneBody>, res: Response) => {
   try {
     const {{snakeCase name}} = await updateOne(req.params.id, req.body);
-    if (!{{snakeCase name}}) return res.status(404).json({ errorMessage: '{{titleCase name}} not found.' });
+    if (!{{snakeCase name}}) return res.status(StatusCodes.NOT_FOUND).json({ errorMessage: '{{titleCase name}} not found.' });
 
-    return res.status(200).json({{snakeCase name}});
+    return res.status(StatusCodes.OK).json({{snakeCase name}});
   } catch (err) {
-    return res.status(500).json(err);
+    return res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
   }
 };
 
-export const delete{{titleCase name}}Handler = async (req: Request, res: Response) => {
+export const delete{{titleCase name}}Handler = async (req: Request<TUpdateOneParams>, res: Response) => {
   try {
     const {{snakeCase name}} = await deleteOne(req.params.id);
 
-    if (!{{snakeCase name}}) return res.status(404).json({ errorMessage: '{{titleCase name}} not found.' });
-    return res.status(200).json({{snakeCase name}});
+    if (!{{snakeCase name}}) return res.status(StatusCodes.NOT_FOUND).json({ errorMessage: '{{titleCase name}} not found.' });
+    return res.status(StatusCodes.OK).json({{snakeCase name}});
   } catch (err) {
-    return res.status(500).json(err);
+    return res.status(StatusCodes.INTERNAL_SERVER_ERROR).json(err);
   }
 };
