--- a/server/templates/schemas.template.hbs
+++ b/server/templates/schemas.template.hbs
@@ -1,29 +1,36 @@
-import * as yup from 'yup';
+import { object, string, TypeOf } from 'zod';
 import mongoose from 'mongoose';
 
-export const actionOneSchema = yup.object({
-  params: yup.object({
-    id: yup
-      .string()
-      .test('invalid_id', 'Invalid {{titleCase name}} ID', (id: any) =>
-        mongoose.Types.ObjectId.isValid(id)
-      )
-      .required(),
-  }),
-});
+export const actionOneSchema = {
+  params: object({
+    id: string({
+      required_error: 'Id is required',
+    }),
+  }).refine(data => mongoose.Types.ObjectId.isValid(data.id), { path: ['id'], message: 'Invalid mongoose ObjectID' }),
+};
 
-export const createOneSchema = yup.object({
-  body: yup.object({}),
-});
-
-export const updateOneSchema = yup.object({
-  params: yup.object({
-    id: yup
-      .string()
-      .test('invalid_id', 'Invalid {{titleCase name}} ID', (id: any) =>
-        mongoose.Types.ObjectId.isValid(id)
-      )
-      .required(),
+export const createOneSchema = {
+  body: object({
+    username: string({
+      required_error: 'username is required',
+    }),
   }),
-  body: yup.object({}),
-});
+};
+
+export const updateOneSchema = {
+  params: object({
+    id: string({
+      required_error: 'Id is required',
+    }),
+  }).refine(data => mongoose.Types.ObjectId.isValid(data.id), { path: ['id'], message: 'Invalid ObjectID' }),
+  body: object({
+    username: string({
+      required_error: 'username is required',
+    }),
+  }),
+};
+
+export type TActionOneParams = TypeOf<typeof actionOneSchema.params>;
+export type TCreateOneBody = TypeOf<typeof createOneSchema.body>;
+export type TUpdateOneParams = TypeOf<typeof updateOneSchema.params>;
+export type TUpdateOneBody = TypeOf<typeof updateOneSchema.body>;
