--- a/client/src/index.css
+++ b/client/src/index.css
@@ -37,7 +37,7 @@ body {
   min-height: 100vh;
   text-rendering: optimizeSpeed;
   line-height: 1.5;
-  font-family: 'Quicksand', sans-serif;
+  font-family: 'Zen Maru Gothic', sans-serif;
 }
 
 /* A elements that don't have a class get default styles */
